# binaryen-const-counter

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  main.cpp
example/: simple.wast
